--- a/renderer/index.html
+++ b/renderer/index.html
@@ -2,7 +2,6 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <!-- https://developer.mozilla.org/en-US/docs/Web/HTTP/CSP -->
     <meta
       http-equiv="Content-Security-Policy"
       content="default-src 'self'; script-src 'self'"
@@ -14,7 +13,10 @@
     <title>Hello from Electron renderer!</title>
   </head>
   <body>
-    <h1>Hello world!</h1>
-    <p>👋</p>
+    <h1>Hello from Electron renderer!</h1>
+    <p></p>
+    <p id="info"></p>
+    
   </body>
+  <script src="./js/renderer.js"></script>
 </html>
