set html structure

--- a/renderer/index.html
+++ b/renderer/index.html
@@ -10,13 +10,24 @@
       http-equiv="X-Content-Security-Policy"
       content="default-src 'self'; script-src 'self'"
     />
-    <title>Hello from Electron renderer!</title>
+    <title>Grammar Correction</title>
   </head>
   <body>
-    <h1>Hello from Electron renderer!</h1>
-    <p></p>
-    <p id="info"></p>
-    
+    <h1>Grammar Correction</h1>
+
+    <div>
+
+      <form id = "form_sentence"></form>
+      <label for="sentence">Sentence</label><br>
+      <textarea name="sentence" rows="4"></textarea><br>
+
+      <input type="submit" value="Submit"><br>
+      <div>
+        <label for="sentence_corrected">Corrected Sentence</label><br>
+        <textarea id="sentence_corrected" rows="4" readonly></textarea>
+      </div>
+    </div>
+
   </body>
   <script src="./js/renderer.js"></script>
 </html>
