--- a/renderer/index.html
+++ b/renderer/index.html
@@ -17,11 +17,12 @@
 
     <div>
 
-      <form id = "form_sentence"></form>
-      <label for="sentence">Sentence</label><br>
+    <form id = "form_sentence">
+      <label for="sentence">Sentence:</label><br>
       <textarea name="sentence" rows="4"></textarea><br>
-
       <input type="submit" value="Submit"><br>
+    </form>
+      <br>
       <div>
         <label for="sentence_corrected">Corrected Sentence</label><br>
         <textarea id="sentence_corrected" rows="4" readonly></textarea>
